# solar_energy

./: .gitignore  Makefile  main.py  pyproject.toml
services/: pyproject.toml
services/get_data_eco2grid/: settings.env
services/get_data_eco2grid/src/: api_eco2grid.py  config.py  main.py
services/get_data_tp/src/: api_tp.py  config.py  main.py  model.py
services/get_data_transparencyplatform/: settings.env
services/get_data_transparencyplatform/src/: main.py  model.py
