[project]
name = "solar-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]

[tool.uv.workspace]
members = ["services"]
